# mcp_client_rust

./: .gitignore  Cargo.toml
src/: lib.rs
src/client/: builder.rs  mod.rs  test.rs
src/server/: mod.rs
src/transport/: mod.rs  websocket.rs
