[package]
name = "mcp_client_rs"
version = "0.1.7"
edition = "2021"
description = "Rust client SDK for the Model Context Protocol (MCP)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gitarcode/mcp_client_rust"
documentation = "https://github.com/gitarcode/mcp_client_rust"
keywords = ["mcp", "client", "protocol", "machine-learning", "ai"]
categories = ["api-bindings", "development-tools"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
thiserror = "2"
futures = "0.3"
tracing = "0.1"
async-stream = "0.3"
tempfile = "3"

[lib]
doctest = false
